@@ -91,6 +91,8 @@ Version 1.3.14:
    * fullscreen now defaults to false	 
    * "hide_help" now hides the unit from the list in help, but still allow to
      see its description (using context-menu or hotkey)
+   * change the default port for the campaign server to 15005 to seperate the 
+     new 1.4.x way from the old possibly broken content from the trunk server
 
 Version 1.3.13:
  * campaigns:
